# torchxai

./: .gitignore  NOTES.md  README.md  TODOs.md  exampl_targets.ipynb  explainers.md  index.html  install.md  instructures.md  locality.ipynb  metrics.md  mkdocs.yml  modality_topk.ipynb  objects.inv  pyproject.toml  sitemap.xml  test.py  usage.md
.github/workflows/: python-publish.yml
benchmarking/: benchmark_mt.py
ci/: bump.sh  format.sh  lint.sh  lint_examples.sh  run_checks.sh  test.sh
ci/explainers/: format.sh  lint.sh
css/: base.css
docs/: .markdownlint.json  .pre-commit-config.yaml  README.md  conf.py  index.md  manage.py  package-lock.json  package.json  pyproject.toml  serve.sh
docs/.github/workflows/: pages.yaml  playwright.yaml  testing.yaml
docs/api/: base_explainer.md  deeplift.md  deeplift_shap.md  explainers.md  feature_ablation.md  gradient_shap.md  guided_backprop.md  input_x_baseline_gradient.md  input_x_gradient.md  integrated_gradients.md  kernel_shap.md  lime.md  occlusion.md  saliency.md
docs/internal/: __init__.py  common.py  i18n.py  integrity.py  katex.py  serve.py  test.py
docs/pages/: mkdocs.yml
docs/pages/_old/: explainers.md  get_started.md  index.md
docs/pages/_old/explainers/: base_explainer.md  deeplift.md  deeplift_shap.md  explainers.rst  feature_ablation.md  gradient_shap.md  guided_backprop.md  input_x_baseline_gradient.md  input_x_gradient.md  integrated_gradients.md  kernel_shap.md  lime.md  occlusion.md  random.md  saliency.md
docs/pages/docs/: explainers.md  index.md  metrics.md  usage.md
docs/pages/docs/explainers/: base_explainer.md  deeplift.md  deeplift_shap.md  gradient_shap.md  guided_backprop.md  input_x_baseline_gradient.md  input_x_gradient.md  integrated_gradients.md  kernel_shap.md  lime.md  occlusion.md  random.md  saliency.md
docs/pages/docs/explainers/examples/: bert.md  image_classification.md  sequence_classification.md  token_classification.md
docs/pages/docs/metrics/: abpc.md  aopc.md  attribution_locality.md  attribution_localization.md  completeness.md  complexity_entropy.md  complexity_sundararajan.md  effective_complexity.md  faithfulness_corr.md  faithfulness_estimate.md  infidelity.md  input_invariance.md  monotonicity.md  monotonicity_corr.md  monotonicity_corr_and_non_sens.md  non_sensitivity.md  sensitivity.md  sensitivity_avg.md  sensitivity_max.md  sensitivity_n.md  sparseness.md
docs/scripts/: deploy.sh  serve.sh
docs/shadcn/: filters.py  main.html  mkdocs_theme.yml  utils.py
docs/shadcn/css/: base.css
docs/shadcn/extensions/: codexec.py  hover_card.py
docs/shadcn/locales/fr/LC_MESSAGES/: messages.mo  messages.po
docs/shadcn/plugins/: _router.py  excalidraw.py  search.py
docs/shadcn/plugins/mixins/: base.py  i18n.py  katex.py  markdown.py  mkdocstrings.py  order.py  table.py
docs/shadcn/templates/: bottom_sidebar.html  breadcrumbs.html  copy_button.html  dark.html  datetime.html  footer.html  header.html  new.html  page.html  permalink.html  search.html  seo.html  sidebar.html  sidebar_item.html  sidebar_section.html  speculation_rules.html  toc.html
docs/tailwind/: admonition.css  article.css  caption.css  codehilite.css  codexec.css  excalidraw.css  extra.css  fonts.css  footer.css  hover_card.css  input.css  kbd.css  main.css  mkdocstrings.css  progress.css  shadcn.css  table.css  tabs.css
docs/tests/: README.md
examples/: image_classification.ipynb  sequence_classification.ipynb  token_classification.ipynb
explainers/: base_explainer.md  deeplift.md  deeplift_shap.md  feature_ablation.md  gradient_shap.md  guided_backprop.md  index.html  input_x_baseline_gradient.md  kernel_shap.md  lime.md  occlusion.md  random.md
explainers/base_explainer/: index.html
explainers/deeplift/: index.html
explainers/deeplift_shap/: index.html
explainers/examples/: token_classification.md
explainers/examples/image_classification/: index.html
explainers/examples/sequence_classification/: index.html
explainers/examples/token_classification/: index.html
explainers/feature_ablation/: index.html
explainers/gradient_shap/: index.html
explainers/guided_backprop/: index.html
explainers/input_x_baseline_gradient/: index.html
explainers/input_x_gradient/: index.html
explainers/integrated_gradients/: index.html
explainers/kernel_shap/: index.html
explainers/lime/: index.html
explainers/occlusion/: index.html
explainers/random/: index.html
explainers/saliency/: index.html
install/: index.html
metrics/: attribution_text_analysis.md  effective_complexity.md  index.html  infidelity.md  input_invariance.md  modality_topk_fraction.md  monotonicity.md  sensitivity.md  sensitivity_avg.md  sensitivity_n.md
metrics/abpc/: index.html
metrics/aopc/: index.html
metrics/attribution_locality/: index.html
metrics/attribution_localization/: index.html
metrics/attribution_text_analysis/: index.html
metrics/completeness/: index.html
metrics/complexity_entropy/: index.html
metrics/complexity_sundararajan/: index.html
metrics/effective_complexity/: index.html
metrics/faithfulness_corr/: index.html
metrics/faithfulness_estimate/: index.html
metrics/infidelity/: index.html
metrics/input_invariance/: index.html
metrics/modality_topk_fraction/: index.html
metrics/monotonicity/: index.html
metrics/monotonicity_corr/: index.html
metrics/non_sensitivity/: index.html
metrics/sensitivity/: index.html
metrics/sensitivity_avg/: index.html
metrics/sensitivity_max/: index.html
metrics/sensitivity_n/: index.html
metrics/sparseness/: index.html
pages/: index.html
search/: search_index.json
tests/: conftest.py  smoke_test.py
tests/explainers/: utils.py
tests/fixtures/: _explainer.py  _explainer_fixtures.py  _metric.py  _models.py  _trainers.py
tests/helpers/: basic_models.py  classification_models.py  evaluate_linear_model.py
tests/metrics/: utils.py
tests/utils/: common.py  configs.py  explanation_steps.py  mnist_train.py  types.py
torchxai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
usage/: index.html
(+140 files in other folders)
