[build-system]
requires = ["setuptools"]  # REQUIRED if [build-system] table is used
build-backend = "setuptools.build_meta"  # If not defined, then legacy behavior can happen.


[project]
name = "torchxai"
version = "0.0.0"  # REQUIRED, although can be dynamic
description = "TorchXAI is a PyTorch-based toolkit designed for evaluating machine learning models using explainability techniques."
readme = "README.md"
requires-python = "==3.11.*"
license = {file = "LICENSE.txt"}
keywords = ["torch", "explainable-ai", "interpretability", "machine-learning", "deep-learning"]
authors = [
    {name = "Saifullah", email = "saifullah.saifullah@dfki.de" }
]
maintainers = [
    {name = "Saifullah", email = "saifullah.saifullah@dfki.de" }
]

# Classifiers help users find your project by categorizing it.
#
# For a list of valid classifiers, see https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "autopep8>=2.1.0",
    "click>=8.0.0",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "pytorch-ignite>=0.5.0.post2",
    "torch==2.1.2",
    "tqdm>=4.66.4",
    "captum==0.7.0",
    "pytest>=8.3.4",
    "pandas>=2.3.3",
    "scipy>=1.16.3",
    "numpy<2.0",
    "torchvision>=0.16.2",
    "pydantic>=2.12.5",
    "scikit-learn>=1.8.0",
    "overrides>=7.7.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.0",
    "mkdocstrings[python]>=1.0.0",
    "mkdocs-shadcn>=0.9.8",
]


[tool.hatch.metadata]
allow-direct-references = true

test = ["coverage", "pytest"]

[tool.coverage.report]
skip_covered = true
show_missing = true
precision = 2
exclude_lines = [
    'def __repr__',
    'pragma= no cover',
    'raise NotImplementedError',
    'if TYPE_CHECKING=',
    'if typing.TYPE_CHECKING=',
    '@overload',
    '@typing.overload',
    '\(Protocol\)=$',
    'typing.assert_never',
    'assert_never',
    'if __name__ == "__main__":',
]

## Linter and formatter
[tool.ruff]
# cover and extend the default config in https=//docs.astral.sh/ruff/configuration/
extend-exclude = ["alembic"]
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long, handled by black
    "B008",   # do not perform function calls in argument defaults
    # "W191",   # indentation contains tabs
    # "B904",   # Allow raising exceptions without from e, for HTTPException
    # "COM819", # Trailing comma prohibited
    # "D100",   # Missing docstring in public module(file)
    # "D104",   # Missing docstring in public package
    # "D203",   # 1 blank line required before class docstring
    # "E201",   # Whitespace after '('
    # "E202",   # Whitespace before ')'
    # "E203",   # Whitespace before '='
    # "E221",   # Multiple spaces before operator
    # "E241",   # Multiple spaces after ','
    # "E251",   # Unexpected spaces around keyword / parameter equals
    # "W291",   # Trailing whitespace
    # "W293",   # Blank line contains whitespace
]

isort = { combine-as-imports = true,  split-on-trailing-comma = false }

# Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]

[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = true


[dependency-groups]
dev = [
    "coverage>=7.12.0",
    "faker>=38.2.0",
    "ipywidgets>=8.1.8",
    "mypy>=1.18.2",
    "pytest>=9.0.1",
    "ruff>=0.14.6",
    "types-requests>=2.32.4.20250913",
]

[project.urls]
"Homepage" = "https://github.com/saifullah3396/torchxai/"
"Bug Reports" = "https://github.com/saifullah3396/torchxai/"
"Source" = "https://github.com/saifullah3396/torchxai/"

[tool.setuptools.packages.find]
where = ["src"]
include = ["torchxai*"]

[tool.setuptools.package-data]
torchxai = ["*.txt", "*.yaml"]

[tool.pytest.ini_options]
pythonpath = [
    ".", "src", "tests"
]
markers = [
    "metrics: Tests related to metrics.",
    "explainers: Tests related to explainers."
]

# Set additional command line options for pytest
# Ref: https://docs.pytest.org/en/stable/reference/reference.html#command-line-flags
addopts = "-rXs --strict-config --strict-markers --tb=short"
xfail_strict = true         # Treat tests that are marked as xfail but pass as test failures
# filterwarnings = ["error"]  # Treat all warnings as errors

[tool.uv]
managed = true
package = true

[tool.distutils.egg_info]
egg_base = "."

[tool.mypy]
disable_error_code = ["import-untyped", "import-not-found"]
