[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# Version is inferred from the most recent git tag (e.g. v0.1.0 → 0.1.0).
# To cut a release: git tag v<x.y.z> && git push --tags


[project]
name = "torchxai-tools"
dynamic = ["version"]
description = "TorchXAI is a PyTorch-based toolkit for evaluating machine learning models using explainability techniques."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE.txt"}
keywords = ["torch", "explainable-ai", "interpretability", "machine-learning", "deep-learning"]
authors = [
    {name = "Saifullah", email = "saifullah.saifullah@dfki.de"}
]
maintainers = [
    {name = "Saifullah", email = "saifullah.saifullah@dfki.de"}
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.1.0",
    "captum>=0.7.0",
    "tqdm>=4.66.0",
    "numpy<2.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.0.0",
    "pydantic>=2.0.0",
    "overrides>=7.0.0",
]

[project.optional-dependencies]
# pip install torchxai-tools[vision]
vision = ["torchvision>=0.16.0"]
# pip install torchxai-tools[dev]
dev = [
    "coverage>=7.0.0",
    "pytest>=9.0.0",
    "ruff>=0.14.0",
    "mypy>=1.0.0",
    "transformers>=4.37.0",
]

[project.urls]
"Homepage" = "https://github.com/saifullah3396/torchxai/"
"Bug Reports" = "https://github.com/saifullah3396/torchxai/issues"
"Source" = "https://github.com/saifullah3396/torchxai/"
"Documentation" = "https://saifullah3396.github.io/torchxai/"


[dependency-groups]
dev = [
    "coverage>=7.12.0",
    "faker>=38.2.0",
    "ipywidgets>=8.1.8",
    "mypy>=1.18.2",
    "pytest>=9.0.1",
    "ruff>=0.14.6",
    "types-requests>=2.32.4.20250913",
    "transformers==4.37.0",
    "ipykernel>=6.25.0",
    "nbqa>=1.9.1",
    "setuptools-scm>=8.0.0",
    "torchvision>=0.16.2",
]


[tool.setuptools.packages.find]
where = ["src"]
include = ["torchxai*"]

[tool.setuptools.package-data]
torchxai = ["*.txt", "*.yaml"]


[tool.coverage.report]
skip_covered = true
show_missing = true
precision = 2
exclude_lines = [
    'def __repr__',
    'pragma= no cover',
    'raise NotImplementedError',
    'if TYPE_CHECKING=',
    'if typing.TYPE_CHECKING=',
    '@overload',
    '@typing.overload',
    '\(Protocol\)=$',
    'typing.assert_never',
    'assert_never',
    'if __name__ == "__main__":',
]

[tool.pytest.ini_options]
pythonpath = [".", "src", "tests"]
markers = [
    "metrics: Tests related to metrics.",
    "explainers: Tests related to explainers.",
]
addopts = "-rXs --strict-config --strict-markers --tb=short"
xfail_strict = true

[tool.uv]
managed = true
package = true

# Use the CPU-only PyTorch index for development and CI.
# This keeps `uv sync` fast (~180 MB instead of ~2 GB CUDA wheel).
# The published package metadata still declares `torch>=2.1.0` so end-users
# get whatever torch variant suits their system.
# GPU developers: override locally with `uv sync --index https://download.pytorch.org/whl/cu121`
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = {index = "pytorch-cpu"}
torchvision = {index = "pytorch-cpu"}

[tool.distutils.egg_info]
egg_base = "."

## Linter and formatter
[tool.ruff]
extend-exclude = ["alembic"]
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long
    "B008",  # do not perform function calls in argument defaults
]
unfixable = ["B"]
isort = {combine-as-imports = true, split-on-trailing-comma = false}

[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
disable_error_code = ["import-untyped", "import-not-found"]
